--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       max-parallel: 40
       matrix:
-        python-version: [2.7, 3.5, 3.6]
+        python-version: [2.7, 3.5, 3.6, 3.7]
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
